# dropbox-data-science

./: .coveragerc  .gitignore  .pylintrc  Pipfile  README.md  notes.org  pyproject.toml  requirements.txt  setup.py
dropbox_ds/: __init__.py  dropboxfile.py  dropboxfolder.py  file.py  folder.py  monitor.py
dropbox_ds/tests/: conftest.py  test_file.py  test_folder.py
dropboxutils/: __init__.py  core.py  exceptions.py  file.py  files.py  folder.py  log.py  logger.py  monitor.py  readers.py  writers.py
dropboxutils/tests/: conftest.py  test_file.py  test_files.py  test_folder.py  test_log.py  test_monitor.py
tests/: test_logger.py  test_readers.py  test_writers.py
tests/test-data/: excel_write.yaml
